--- a/templates/_base.html
+++ b/templates/_base.html
@@ -10,6 +10,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script type="text/javascript"
+    src="https://app.sandbox.midtrans.com/snap/snap.js"
+    data-client-key="SB-Mid-client-eL-ooBpus8fI8r5C"></script>
     <title>OpenTicket</title>
 
     {% compress css %}
