--- a/templates/history.html
+++ b/templates/history.html
@@ -12,6 +12,10 @@
     <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
         <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
             <tr>
+
+                <th scope="col" class="px-6 py-3">
+                    TransactionID
+                </th>
                 <th scope="col" class="px-6 py-3">
                     Product
                 </th>
@@ -27,6 +31,9 @@
                 <th scope="col" class="px-6 py-3">
                     Order date
                 </th>
+                <th scope="col" class="px-6 py-3">
+                    Payment type
+                </th>
             </tr>
 
         </thead>
@@ -34,19 +41,26 @@
             {% for transaction in transactions %}
             <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
                 <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
-                    {{ transaction.product.name }}
+                    
+                    <a class="text-blue-500 italic" href="/api/v1/payments/finish/handling?transaction_id={{ transaction.transaction_id }}">{{ transaction.transaction_id }}</a>
+                </th>
+                <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
+                    {{ transaction.product_schedule.product.name }}
                 </th>
                 <td class="px-6 py-4">
-                    {{ transaction.product.categoryId.name }}
+                    {{ transaction.product_schedule.product.categoryId.name }}
                 </td>
                 <td class="px-6 py-4">
-                    Rp. {{ transaction.product.price|intcomma}}
+                    Rp. {{ transaction.product_schedule.product.price|intcomma}}
                 </td>
                 <td class="px-6 py-4">
                     {{ transaction.sheet}}
                 </td>
                 <td class="px-6 py-4">
                     {{ transaction.created_at}}
+                </td>
+                <td class="px-6 py-4">
+                    {{ transaction.payment_type}}
                 </td>
             </tr>
             {% endfor %}
